# adapterly

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENV_VARIABLES.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_fastapi.py
.github/workflows/: ci.yml  deploy.yml
adapterly-gateway/: .env.example  .gitignore  Dockerfile  MANIFEST.in  build_prepare.sh  docker-compose.yml  pyproject.toml
adapterly-gateway/gateway/: __main__.py  _env_writer.py  cli.py  config.py  main.py
adapterly-gateway/gateway/admin/: credential_schema.py  routes.py
adapterly-gateway/gateway/setup/: __init__.py  routes.py
adapterly-gateway/gateway/sync/: key_sync.py
adapterly-gateway/tests/: conftest.py  test_auth.py  test_config.py  test_crypto.py  test_diagnostics.py  test_executor.py  test_mcp_server.py
adapters/: _template.yaml
adapters/construction/: aiforsite.yaml  congrid.yaml
apps/accounts/: adapters.py  admin.py  apps.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
apps/accounts/api/: filters.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_accountuser_unique_together.py  0003_accountuser_is_current_active.py  0004_userinvitation.py  0005_add_external_id.py  0006_add_default_project.py  0007_deviceauthorization.py
apps/core/: context_processors.py  crypto.py  fields.py  middleware.py  safe_eval.py  tests.py  throttles.py  urls.py  views.py
apps/core/templatetags/: form_tags.py  now.py
apps/gateways/migrations/: 0001_initial.py
apps/help/: apps.py  urls.py  views.py
apps/help/docs/: concepts.md  faq.md  guides.md  index.md  mcp.md  recipes.md  reference.md  systems.md  troubleshooting.md  tutorial.md
apps/mcp/: __init__.py  admin.py  apps.py  audit.py  categories.py  models.py  permissions.py  project_urls.py  project_views.py  server.py  sessions.py  urls.py  views.py
apps/mcp/api/: __init__.py  serializers.py  transport.py  urls.py  views.py
apps/mcp/browser/: __init__.py  session.py
apps/mcp/migrations/: 0001_initial.py  0002_tool_categories.py  0003_capability_packs.py  0004_audit_reasoning_rollback.py  0005_add_agent_profile.py  0006_add_project.py  0007_alter_mcpauditlog_tool_type_and_more.py  0008_errordiagnostic.py  0009_add_projectintegration.py  0010_data_create_default_projects_and_integrations.py  0011_project_entity_mapping_fk.py  0012_projectintegration_allowed_actions.py  0013_remove_data_mappings.py  0014_profile_project_fk.py  0015_data_migrate_profiles.py  0016_finalize_constraints.py  0017_remove_categories.py  0018_alter_agentprofile_include_tools.py
apps/mcp/resources/: __init__.py  systems.py
apps/oauth/: admin.py  apps.py  models.py  urls.py  views.py
apps/systems/: adapter_generator.py  adapter_loader.py  admin.py  apps.py  discovery.py  forms.py  models.py  refresh.py  services.py  urls.py  views.py  wizard_views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: fastapi.service  nginx-fastapi.conf  setup-fastapi.sh
docker/: entrypoint.sh  nginx.conf
docs/: ACTION_TESTING.md  AMAZON_SES_SETUP.md  AUTO_ACCOUNT_CREATION.md  EMAIL_CONFIGURATION.md  GOOGLE_OAUTH_SETUP.md  INVITATION_IMPLEMENTATION_SUMMARY.md  SECURITY_USER_INVITATIONS.md  STATIC_FILES_GUIDE.md  USER_INVITATION_GUIDE.md  USER_PROFILE_MANAGEMENT.md  XHR_AUTHENTICATION.md
fastapi_app/: __init__.py  config.py  crypto.py  database.py  dependencies.py  main.py
fastapi_app/mcp/: __init__.py  permissions.py  router.py  server.py  sessions.py
fastapi_app/models/: __init__.py  accounts.py  base.py  clients.py  mcp.py  systems.py
static/css/: main.css
templates/account/: email.html  email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/socialaccount/: login_cancelled.html  signup.html
(+146 files in other folders)
